--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   react-app:
     build:
-      context: ./front-end/company-interface
+      context: ./front-end
       dockerfile: Dockerfile
     ports:
       - "3000:80"
@@ -15,7 +15,7 @@ services:
       context: ./back-end
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "8080:5000"
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
