--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -22,6 +22,8 @@ FROM nginx:alpine
 # Copy the built React app from the previous step
 COPY --from=build /app/build /usr/share/nginx/html
 
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+
 # Expose port 80 to the outside world
 EXPOSE 80
 
