--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
+    "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc-ab2135c7-20240724",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0-rc-ab2135c7-20240724",
     "react-icons": "^5.2.1",
     "react-leaflet": "^5.0.0-rc.1",
+    "react-leaflet-heatmap-layer": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
